Split entry for i686-pc-linux-gnu for Red Hat 6.2 and 7.1 into two entries, specifying glibc 2.2 for Red Hat 7.1.

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -152,7 +152,12 @@
 
 <tr>
 <td>i686-pc-linux-gnu</td>
-<td>Successful (Red Hat 6.2; Red Hat 7.1)</td>
+<td>Successful (Red Hat 6.2)</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Successful (Red Hat 7.1, glibc 2.2)</td>
 </tr>
 
 <tr>
