Add kernel versions for two existing i686-pc-linux-gnu entries:   (Red Hat 7.1, glibc 2.2, kernel 2.4.10)   (SuSE 6.2, glibc 2.1.1, kernel 2.2.19)

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -157,7 +157,7 @@
 
 <tr>
 <td>i686-pc-linux-gnu</td>
-<td>Successful (Red Hat 7.1, glibc 2.2)</td>
+<td>Successful (Red Hat 7.1, glibc 2.2, kernel 2.4.10)</td>
 </tr>
 
 <tr>
@@ -172,7 +172,7 @@
 
 <tr>
 <td>i686-pc-linux-gnu</td>
-<td>Successful (SuSE 6.2, glibc 2.1.1)</td>
+<td>Successful (SuSE 6.2, glibc 2.1.1, kernel 2.2.19)</td>
 </tr>
 
 <tr>
