It's bug-gcc@gnu.org, not bugs-gcc@gnu.org.

--- a/htdocs/bugs.html
+++ b/htdocs/bugs.html
@@ -137,7 +137,7 @@ three of which can be obtained from the output of <code>gcc -v</code>:
 <p>Please submit your bug report directly to the
 <a href="gnats.html">GCC GNATS bug database</a>.
 Only if this is not possible, mail all information to
-<a href="mailto:bugs-gcc@gnu.org">bugs-gcc@gnu.org</a> or
+<a href="mailto:bug-gcc@gnu.org">bug-gcc@gnu.org</a> or
 <a href="mailto:gcc-bugs@gcc.gnu.org">gcc-bugs@gcc.gnu.org</a>.
 
 
