--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -154,6 +154,14 @@ and automated testers</a> to maintain and improve quality.
 
 <dl>
 
+<dt><b>November 3, 2001</b></dt>
+<dd>
+Hans-Peter Nilsson has contributed a port to <a
+href="http://www-cs-faculty.stanford.edu/~knuth/mmix.html">MMIX</a>, the
+CPU architecture used in new editions of Donald E. Knuth's The Art of
+Computer Programming.
+</dd>
+
 <dt><b>October 25, 2001</b></dt>
 <dd>
 GCC 3.0.2 has been released.
