Add i586-pc-linux-gnu (k6) (Red Hat 7.0, glibc 2.2.4).

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -126,6 +126,11 @@
 </tr>
 
 <tr>
+<td>i586-pc-linux-gnu (k6)</td>
+<td>Successful (Red Hat 7.0, glibc 2.2.4)</td>
+</tr>
+
+<tr>
 <td>i586-pld-linux-gnu</td>
 <td>Successful (PLD devel 1.0, glibc 2.2.3, kernel 2.2.19)</td>
 </tr>
