Update readings.html for 68HC11/68HC12

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -166,6 +166,13 @@ tahoe. These are listed here just for completeness.
   <br><a href="http://www.mitsubishichips.com/products/mcu/products/32-bit/index.html">M32R/D Site</a>
   <br>GDB includes a CGEN generated simulator.
 
+ <li>m68hc11 (m68hc12)
+  <br>Manufacturer: <a href="http://www.motorola.com/">Motorola</a>
+  <br><a href="http://www.motorola.com/mcu/">68HC11/68HC12 documentation</a>
+  <br><a href="http://www.gnu-m68hc11.org/">http://www.gnu-m68hc11.org</a>
+  GNU Development Chain for 68HC11 and 68HC12.
+  <br>GDB includes a 68HC11 and a 68HC12 simulator.
+
  <li>m68k
   <br>Manufacturer: <a href="http://www.motorola.com">Motorola</a>
 
