* index.html: Added news item for verifier. 	* projects.html: Remove bytecode verifier from project list.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -69,13 +69,20 @@ can see the <a href="libgcj-classpath-compare.html">status of the merge</a>.)
 
 <table>
 <tr><td valign="top">
+<b>November 5, 2001</b>
+</td><td>
+Tom Tromey contributed a bytecode verifier.  It hasn't yet been
+extensively tested, so it is still disabled by default.
+</td></tr>
+
+<table>
+<tr><td valign="top">
 <b>October 24, 2001</b>
 </td><td>
 Tom Tromey of Red Hat checked in the <code>javax.naming</code> and
 <code>javax.transaction</tt> packages, started by Anthony Green
 finished by Warren Levy and Tom.
 </td></tr>
-
 
 <tr><td valign="top">
 <b>October 2, 2001</b>
