* index.html: Restored deleted <table>.  Added clarifying 	comments.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -67,6 +67,10 @@ can see the <a href="libgcj-classpath-compare.html">status of the merge</a>.)
 </tr>
 </table>
 
+<table>
+
+<!-- News entries start here -->
+
 <tr><td valign="top">
 <b>November 5, 2001</b>
 </td><td>
@@ -142,6 +146,9 @@ Currently, this code is enabled for IA-64 and X86 Linux.
 </td><td>
 <a href="old-news.html">Less recent GCJ news</a>
 </td></tr>
+
+<!-- News entries end here -->
+
 </table>
 
 </GCJNAV>
