Add link to new page for data prefetch support.

--- a/htdocs/projects/index.html
+++ b/htdocs/projects/index.html
@@ -19,6 +19,7 @@
 <li><a href="#value_range_propagation_pass">Value range propagation pass</a>
 <li><a href="#automaton_based_pipeline_hazard_recognizer">Automaton based pipeline hazard recognizer</a>
 <li><a href="#ast_optimizer">Tree optimization passes</a>
+<li><a href="#data_prefetch">Data prefetch support</a>
 </ul>
 <li><a href="#optimizer_inadequacies">Optimizer inadequacies</a>
 <li><a href="#ia64 projects">Projects to improve performance on IA-64</a>
@@ -133,6 +134,11 @@ pipelining implementation.</p>
 <h3><a name="ast_optimizer">Tree optimization passes</a></h3>
 A separate page describes <a href="ast-optimizer.html">abstract
 syntax tree optimization passes</a> that are being worked on.</p>
+
+<h3><a name="data_prefetch">Data prefetch support</a></h3>
+<p>A separate page describes <a href="prefetch.html">
+data prefetch support and optimizations</a> that are in development
+in the main branch.</p>
   
 <h2><a name="optimizer_inadequacies">Optimizer inadequacies</a></h2>
 <p>We also have a page detailing <a href="optimize.html">optimizer
