--- a/htdocs/codingconventions.html
+++ b/htdocs/codingconventions.html
@@ -173,6 +173,135 @@ against <code>error_mark_node</code> rather than by comparing the
 href="http://gcc.gnu.org/ml/gcc-patches/2000-10/msg00792.html">message</a>.</p>
 
 
+<h2>Spelling, terminology and markup</h2>
+
+<p>The following conventions of spelling and terminology apply
+throughout GCC, including the manuals, web pages, diagnostics,
+comments, and (except where they require spaces or hyphens to be used)
+function and variable names, although consistency in user-visible
+documentation and diagnostics is more important than that in comments
+and code.  The following table lists some simple cases:</p>
+
+<table cellpadding="4">
+  <tr>
+    <th>Use...</th><th>...instead of</th><th>Rationale</th>
+  </tr>
+  <tr>
+    <td>American spelling (in particular -ize, -or)</td>
+    <td>British spelling (in particular -ise, -our)</td>
+    <td></td>
+  <tr>
+    <td>"32-bit" (adjective)</td>
+    <td>"32 bit"</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>"back end" (noun)</td>
+    <td>"back-end" or "backend"</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>"back-end" (adjective)</td>
+    <td>"back end" or "backend"</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>"bit-field"</td>
+    <td>"bit field" or "bitfield"</td>
+    <td>Spelling used in C and C++ standards</td>
+  </tr>
+  <tr>
+    <td>"built-in" as an adjective ("built-in function") or "built in"</td>
+    <td>"builtin"</td>
+    <td>"builtin" isn't a word</td>
+  </tr>
+  <tr>
+    <td>"dependent" (adjective), "dependence", "dependency"</td>
+    <td>"dependant", "dependance", "dependancy"</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>"front end" (noun)</td>
+    <td>"front-end" or "frontend"</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>"front-end" (adjective)</td>
+    <td>"front end" or "frontend"</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>"nonzero"</td>
+    <td>"non-zero" or "non zero"</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>"Objective-C"</td>
+    <td>"Objective C"</td>
+  </tr>
+</table>
+
+<p>"GCC" should be used for the GNU Compiler Collection, both
+generally and as the GNU C Compiler in the context of compiling C;
+"G++" for the C++ compiler; "gcc" and "g++" (lowercase), marked up
+with <code>@command</code> when in Texinfo, for the commands for
+compilation when the emphasis is on those; "GNU C" and "GNU C++" for
+language dialects; and try to avoid the older term "GNU CC".</p>
+
+<p>In Texinfo manuals, Texinfo 4.0 features may be used, and should be
+used where appropriate.  URLs should be marked up with
+<code>@uref</code>; email addresses with <code>@email</code>;
+command-line options with <code>@option</code>; names of commands with
+<code>@command</code>; environment variables with <code>@env</code>.
+NULL should be written as <code>@code{NULL}</code>.  Tables of
+contents should come just after the title page; printed manuals will
+be formatted (for example, by <code>make dvi</code>) using
+<code>texi2dvi</code> which reruns TeX until cross-references
+stabilize, so there is no need for a table of contents to go at the
+end for it to have correct page numbers.  The <code>@refill</code>
+feature is obsolete and should not be used.  All manuals should use
+<code>@dircategory</code> and <code>@direntry</code> to provide Info
+directory information for <code>install-info</code>.</p>
+
+<p>It is useful to read the <a
+href="http://www.gnu.org/manual/texinfo/">Texinfo manual</a>.  Some
+general Texinfo style issues discussed in that manual should be
+noted:</p>
+
+<ul>
+
+  <li>For proper formatting of the printed manual, TeX quotes (matched
+  <code>`</code> or <code>``</code> and <code>'</code> or
+  <code>''</code>) should be used; neutral ASCII double quotes
+  (<code>"..."</code>) should not be.  Similarly, TeX dashes
+  (<code>--</code> (two hyphens) for an en dash and <code>---</code>
+  (three hyphens) for an em dash) should be used; normally these
+  dashes should not have whitespace on either side.  Minus signs
+  should be written as <code>@minus{}</code>.
+
+  <li>For an ellipsis, <code>@dots{}</code> should be used; for a
+  literal sequence of three dots in a programming language, the dots
+  should be written as such (<code>...</code>) rather than as
+  <code>@dots{}</code>.</li>
+
+  <li>English text in programming language comments in examples should
+  be enclosed in <code>@r{}</code> so that it is printed in a
+  non-fixed-width font.</li>
+
+  <li>Full stops that end sentences should be
+  followed by two spaces or by end of line.  Full
+  stops that are preceded by a lower-case letter but do not end a
+  sentence should be followed by <code>@:</code> if they are not
+  followed by other punctuation such as a comma; full stops, question
+  marks and exclamation marks that end a sentence but are preceded by
+  an upper-case letter should be written as "<code>@.</code>",
+  "<code>@?</code>" and "<code>@!</code>", respectively.  (This is not
+  required if the capital letter is within <code>@code</code> or
+  <code>@samp</code>.)</li>
+
+</ul>
+
+
 <h2>Upstream packages</h2>
 
 <p>Some files and packages in the CVS tree are imported from elsewhere,
