* cni-2.txt: Update to reflect GCJ 3.x. 	* faq.html: Various updates and fixes. 	* download.html: Likewise. 	* test.html: Likewise.

--- a/htdocs/java/download.html
+++ b/htdocs/java/download.html
@@ -20,8 +20,8 @@
 </table>
 <br>
 
-The most current official release of GCJ and libgcj is 3.0, which is included 
-with the GCC 3.0 source distribution. 
+The most current official release of GCJ and libgcj is 3.0.2, which is included 
+with the GCC 3.0.2 source distribution. 
 <p>
 Follow the links on <a href="http://gcc.gnu.org/releases.html">http://gcc.gnu.org/releases.html</a>
 to download the compiler.  You will need either the full distribution,
@@ -51,8 +51,8 @@ GCJ which should work out-of-the-box. Look for packages like "gcc-java" and
 </table>
 <br>
 
-The latest development sources are available in three forms: periodic
-snapshots, pre-built RPMs and directly from the cvs source repository.
+The latest development sources are available both as periodic
+snapshots, and directly from the cvs source repository.
 
 <p>
 Please note that the current development source tree may occasionally have 
