--- a/htdocs/java/test.html
+++ b/htdocs/java/test.html
@@ -4,7 +4,7 @@
 
 <GCJNAV>
 
-<h1>Testing and the GCJ Project</h1>
+<h1>Testing GCJ</h1>
 
 <table border="0" cellpadding="4" width="95%">
 <tr bgcolor="#b0d0ff">
