--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -133,24 +133,18 @@
         </dt>
         <p> 
         <dd>Gcj and libgcj are known to work more or less with IA-32 and 
-          Sparc Solaris, as well as IA-32, Alpha, and PowerPC Linux. 
-	  They might work on other systems, but we don't know. 
-          Generally speaking, porting to a new system should not be hard. This 
-          would be a good way to volunteer.</dd>
+          Sparc Solaris, Tru64 Unix, as well as IA-32, IA-64, Alpha, and PowerPC 
+	  Linux. They might work on other systems. Generally speaking, porting to a new 
+	  system should not be hard. This would be a good way to volunteer.</dd>
         <p></p>
         <dt> 
           <hr>
           <h3><a name="1_6">1.6 How can I debug my Java program?</a></h3>
         </dt>
         <p> 
-        <dd><a href="ftp://ftp.gnu.org/pub/gnu/gdb/gdb-4.18.tar.gz">gdb 4.18</a> 
-          includes support for debugging gcj-compiled Java programs. For linux, 
-          you will need to use a recent development snapshot of gdb from 
-	  <a href="ftp://sources.redhat.com/pub/gdb/snapshots/">ftp://sources.redhat.com/pub/gdb/snapshots/</a> 
-	  , or the gdb included with Redhat 6.1 and newwer. 
-	  The standard 4.18 does not have support for linux threads. 
-	  For more information please read 
-	  <a href="gdb.html">Java Debugging with gdb</a>.</dd>
+        <dd><a href="ftp://ftp.gnu.org/pub/gnu/gdb/">gdb 5.0</a> 
+          includes support for debugging gcj-compiled Java programs. For more 
+	  information please read <a href="gdb.html">Java Debugging with gdb</a>.</dd>
         <dt>&nbsp; </dt>
 
         <dt> 
@@ -173,7 +167,7 @@
 $ gcj -shared -o HelloWorld.so HelloWorld.java
 $ gij HelloWorld
 </pre>
-          This works because gij uses Class.forName, which now knows how to load shared objects.
+          This works because gij uses Class.forName, which knows how to load shared objects.
         </dd>
         <dt>&nbsp; </dt>	
       </dl>
@@ -189,8 +183,8 @@ $ gij HelloWorld
       <h3><a name="2_1">2.1 What Java API's are supported?</a> How complete is 
         the support?</h3>
       <dl> 
-        <dd> <a href="mailto:mdw@cs.berkeley.edu">Matt Welsh</a> writes:</dd>
-        <dl> 
+        <p><dd><a href="mailto:mdw@cs.berkeley.edu">Matt Welsh</a> writes:</dd></p>
+        <dl>
           <dd>Just look in the 'libjava' directory of libgcj and see what classes 
             are there. Most GUI stuff isn't there yet, that's true, but many of 
             the other classes are easy to add if they don't yet exist. </dd>
@@ -251,51 +245,16 @@ $ gij HelloWorld
 	<A HREF="http://www.ii.uib.no/~rolfwr/jcnix/">xlib peers</A>.
       </dl>
       <hr>
+
       <h3><a name="2_5">2.5 How about support for Swing</a>?</h3>
       <dl> 
-        <dl> 
-          <dt>Considering that AWT support isnt here yet there is no chance of 
-            getting Swing running. Once we have AWT support the Swing 1.1.1 may 
-            be usable and even redistributable, but JFC will be another issue, 
-            as <a href="mailto:moroz@metahood.ru">Oleg Moroz</a> summarises: 
-            <blockquote> 
-              <p>1) Swing 1.1.1 for JDK 1.1.x with license that allows to redistribute 
-                it as part of the value-added applet or application. This needs 
-                some research, however I feel that the term "value-added application" 
-                might include e.g. gcj-based development system; if it is not 
-                by itself, a simple Swing-based application might be added to 
-                the distribution). This version depends on AWT 1.1 only (well, 
-                1.1.x, x >=7) and it seems that the Sun's version could be used 
-                for most purposes people would like to use it. </p>
-            </blockquote>
-          </dt>
-          <blockquote> 
-            <p>2) Swing (JFC) that is part of Java2. This is AFAIK not available 
-              as separate product and is covered by more restrictive (in this 
-              case at least) JDK license; it is also dependent on AWT 1.2 features. 
-              We'd want to develop a replacement only when we move to the 1.2 
-              codebase and then we'll also need to develop AWT 1.2 replacement 
-              w/o regard to Swing.</p>
-          </blockquote>
-        </dl>
-        <dl> 
-          <dt><a href="mailto:per@bothner.com">Per Bothner</a> expands:</dt>
-          <dd>&nbsp;</dd>
-          <dd>One possibility worth considering is developing Swing components 
-            in conjunction with AWT. We can implement JTextArea and TextArea at 
-            the same time. We could also implement both on top of (say) some Gtk 
-            widget; we don't necessarily *have* to go the "peerless" route. Instead, 
-            we can base the "plugable look-and-feel" on the "themebility" of (say) 
-            Gtk. </dd>
-          <dt>&nbsp;</dt>
-          <dd>A bigger potential issue is Swing's separation between &quot;model&quot; 
-            (e.g. Document) and &quot;view&quot; (e.g. JTextPane). It may be difficult 
-            to make use of the functionality of an existing toolkit such as Gtk 
-            unless we can use Gtk widgets with separate &quot;model&quot; objects.</dd>
-        </dl>
-        <dt>&nbsp; </dt>
-        <hr>
+        <dd>Once AWT support is working then Swing support can be considered. There
+	is at least one free-software partial implementations of Swing that may 
+	be usable.
+        </dd>
       </dl>
+      <hr>
+
       <h3><a name="2_6">2.6 </a>What support is there for RMI?</h3>
       <dl> 
         <dd> RMI code exists on the CVS trunk (aka gcc 3.1), but it
@@ -303,16 +262,11 @@ $ gij HelloWorld
 	      Transvirtual Technologies.
 	</dd>
       </dl>
-      <p></p>
+      <hr>
+
+      <h3><a name="2_7">2.7 Can I use any code from other OpenSource
+        projects to supplement libgcj's current features?</a></h3>
       <dl> 
-        <dt>&nbsp; </dt>
-        <hr>
-      </dl>
-      <dl> 
-        <dt> 
-          <h3><a name="2_7">2.7 Can I use any code from other OpenSource
-            projects to supplement libgcj's current features?</a></h3>
-        </dt>
 	<dd>
 	<p> Certainly. However, in many cases, if you wanted to contribute the 
 	code back into the official libgcj distribution, we would require that the 
@@ -330,7 +284,6 @@ $ gij HelloWorld
 	Needless to say, this is a lot of work. If you can help out, please
 	<A HREF="mailto:java@gcc.gnu.org">let us know</A>!
       </dl>
-
       <hr>
 
       <dl> 
@@ -338,8 +291,8 @@ $ gij HelloWorld
           <h3><a name="2_8">2.8 What features of the Java language are/aren't supported.</a></h3>
         </dt>
         <dd>GCJ supports all Java language constructs as per the 
-          <a href="http://java.sun.com/docs/books/jls/">Java language Specification 
-          v1.0</a>. Recent GCJ snapshots have added support for most JDK1.1 
+          <a href="http://java.sun.com/docs/books/jls/">Java language Specification</a>. 
+	  Recent GCJ snapshots have added support for most JDK1.1 (and beyond)
 	  language features, including inner classes.
       </dl>
       <dl> 
@@ -355,7 +308,8 @@ $ gij HelloWorld
 
       <dl> 
         <dt> 
-          <h3><a name="3_1">3.1 I need something more recent than the last release; how should I build it?</a></h3>
+          <h3><a name="3_1">3.1 I need something more recent than the last release. 
+	  How should I build it?</a></h3>
         </dt>
         <p> 
         <dd>Please read <a href="build-snapshot.html">here</a>.
@@ -465,16 +419,13 @@ $ ../configure [...]
       </dl>
       <p> 
       <dl> 
-        <dd>The GCJ compiler will compile both java source and bytecode .class 
-          files. For the moment support for compiling bytecodes will support more 
-          applications than compiling from source, as the source code compiler 
-          has some bugs in its support for inner classes, which are used heavily 
-	  in programs written for the JDK 1.1 (AWT in particular). 
-          <p>In many cases the native code produced by compiling from source is 
-            better optimised than that compiled from .class files. Per Bothner 
-            explains:</p>
+        <dd>GCJ will compile both source <code>(.java)</code> and bytecode 
+	  <code>(.class)</code> files. However, in many cases the native code produced 
+	  by compiling from source is better optimised than that compiled from .class 
+	  files. 
+	  
+        <p><a href="mailto:per@bothner.com">Per Bothner</a> explains: </p>
         </dd>
-        <dt> 
           <dl> 
             <dd>The reason is that when you compile to bytecode you lose a lot 
               of information about program structure etc. That information helps 
@@ -489,14 +440,15 @@ $ ../configure [...]
                 bytecode.</p>
             </dd>
           </dl>
-        </dt>
-        <hr>
-        <dt><font color="#FF3300"></font></dt>
+      </dl>
+      <hr>
+
+      <dl> 
         <dt> 
-          <h3><a name="4_3">4.3 &quot;gcj -C"</a> Doesnt seem to work like javac/jikes. 
-            Whats going on?</h3>
+	  <h3><a name="4_3">4.3 &quot;gcj -C"</a> Doesnt seem to work like javac/jikes. 
+              Whats going on?</h3>
         </dt>
-        <blockquote> 
+        <blockquote>
           <p>The behavior of "gcj -C" is not at all like javac or jikes, which 
             will compile (not just scan) all .java's which are out of date with 
             regard to their .class's.</p>
@@ -510,8 +462,10 @@ $ ../configure [...]
         </dt>
         <blockquote> 
           <p>GCJ looks for classes to compile based on the CLASSPATH environment 
-            variable. An important limitation presently is that gcj doesn't handle 
-            compressed jar files in your classpath. </p>
+            variable. <code>libgcj.jar</code> and other files are found relative to the 
+	    path of the compiler itself, so it is safe to move the entire compiler tree
+	    to a different path, and there is no need to include <code>libgcj.jar</code>
+	    in your CLASSPATH. </p>
         </blockquote>
       </dl>
       <hr>
@@ -522,10 +476,11 @@ $ ../configure [...]
             or .java files?</a></h3>
         </dt>
         <blockquote> 
-          <p>GCJ seems to favor .class files in the CLASSPATH, if any, otherwise 
-            it will use the source (.java), also in the CLASSPATH. It also checks 
-            to see if the class is newer than the .java file. If it can't find 
-            either it throws an error.</p>
+          <p>GCJ compiles only the files presented to it on the command line.  However,
+	  it also needs to scan other files in order to determine the layout of other
+	  classes and check for errors in your code.  For these dependencies, GCJ will
+	  favour .class files if they are available because it is faster to parse a 
+	  class file than source code.
         </blockquote>
       </dl>
       
@@ -539,7 +494,8 @@ $ ../configure [...]
         <p>If you get errors at link time that refer to
           'undefined reference to `java::lang::Object type_info function',
           verify that you have compiled any CNI C++ files with the
-          -fno_rtti option.
+          -fno-rtti option. This is only required for versions of GCJ earlier 
+	  than 3.0.
         </blockquote>
       </dl>
 
@@ -557,7 +513,7 @@ $ ../configure [...]
 	There are three solutions:
 	<ul>
 	  <li>downgrade to binutils that don't support .hidden at all,
-	  <li>upgrade to a recent CVS binutils, or
+	  <li>upgrade to a recent binutils, or
 	  <li>undef the HAVE_GAS_HIDDEN definition in gcc's auto-host.h
 	  (and rebuild gcc).
 	</ul>
@@ -581,28 +537,18 @@ $ ../configure [...]
         <dt> 
           <h3><a name="5_1">5.1 My program is dumping core! What's going on?</a></h3>
         </dt>
-        <p> 
         <dd>
 	  It could be any number of things. One common mistake is
           having your <tt>CLASSPATH</tt> environment variable pointing
           at a third party's java.lang and friends. Either unset
           <tt>CLASSPATH</tt>, or make sure it does not refer to core
           libraries other than those found in
-          <tt>libgcj.jar</tt>.</dd>
-
-	  <p> An other symptom covered by this fix is a running
-          "<tt>Hello World</tt>" type program, with a lot of non printable
-	  ASCII garbage before and/or after the output.
-
-	  <p> But note that if this still happens to you, you should
-          definitively update to a newer front-end that will reject
-          <tt>libgcj.jar</tt>s that weren't <A
-          HREF="http://gcc.gnu.org/ml/java/2001-03/msg00383.html">generated</A>
-          by gcj.
-
-        <dd></dd>
+          <tt>libgcj.jar</tt>.Note that newwer versions of 
+	  GCJ will reject the core class library if it wasn't 
+	  <A HREF="http://gcc.gnu.org/ml/java/2001-03/msg00383.html">generated</A>
+          by GCJ itself.
+        </dd>
       </dl>
-      <p></p>
       <dl> 
         <dt> 
           <hr>
@@ -616,8 +562,6 @@ $ ../configure [...]
           stack boundaries. It is ordinarily caught and handled by the GC -- you 
           can see this in the debugger by using <tt>cont</tt> to continue to the 
           "real" segv. 
-          <p>This shouldn't happen anymore, as we don't define MPROTECT_VDB in the 
-            GC, at least for Linux/386.</p>
         </dd>
       </dl>
       <p></p>
@@ -641,12 +585,10 @@ $ ../configure [...]
               and the compiler is still not so smart about automatically removing 
               array checks. If your code is ready, and it doesn't rely on them, 
               try compiling with --no-bounds-check. </li>
-            <li>Try static linking. The interaction with boehm-gc seems to incur 
-              extra overhead when shared libraries are used. On one program that 
-              makes heavy use of the allocator I achieved over 30% runtime performance 
-              gain with static linking. This shouldn't be an issue
-              with the current CVS gcj, as it handles GC marking
-              differently in most cases.</li>
+            <li>Try static linking.  On many platforms, dynamic (PIC) function 
+	      calls are more expensive than static ones. In particular, the 
+	      interaction with boehm-gc seems to incur extra overhead when shared 
+	      libraries are used. </li>
             <li>If your Java application doesn't need threads, try building libgcj 
               using --enable-threads=none. Portions of the libgcj runtime are 
               still more efficient when single-threaded.</li>
@@ -684,10 +626,12 @@ $ ../configure [...]
         <dt> 
           <h3><a name="5_6">5.6 How can I profile my application?</a></h3>
         </dt>
-        <dd>Support for this is currently lagging. Only single threaded Java code 
-          may be used by the profiler (gprof). POSIX threads seem to be incompatible 
-          with the gmon stuff.</dd>
-        <dt>&nbsp;</dt>
+        <dd>Currently, only single threaded Java code may be used by the profiler 
+	(gprof). POSIX threads seem to be incompatible with the gmon stuff.</dd>
+	<p>
+	A couple of other tools that have been mentioned on the GCJ mailing list are 
+	sprof and cprof.  The former is part of GNU libc; the latter can be found
+	<A HREF="http://opensource.corel.com/cprof.html">here</A>.</p>
       </dl>
       
     <hr>  
@@ -696,8 +640,8 @@ $ ../configure [...]
       <h3><a name="5_7">5.7 My program seems to hang and doesn't produce any output</a></h3>
 	</dt>
     <dd>
-    There seems to be a bug in the current iconv support. You can work around
-    it for now by setting <tt>LANG=en_US.UTF-8</tt> at runtime. Or give the
+    Some versions had a bug in the iconv support. You can work around
+    it by setting <tt>LANG=en_US.UTF-8</tt> at runtime, or give the
     following option during compile time
     <tt>-Dfile.encoding=UTF-8</tt>.  This problem should no longer
     occur as of November 1, 2000.
@@ -715,13 +659,18 @@ $ ../configure [...]
       <h3><a name="6_1"></a>6.1 Are there any examples of how to use CNI?</h3>
       <blockquote> 
         <p>Glenn Chambers has created a couple 
-          of trivial examples <a href="cni-1.txt">here</a> and <a href="cni-2.txt">here</a>. 
+       of trivial examples for
+       <a href="cni-1.txt">version 2.95</a> 
+        and <a href="cni-2.txt">version 3.0</a>. 
         As a comparision, <a href="jni-kaffe.txt">here</a>
-        is the same example as a JNI application.
+        is the same example as a JNI application using 
+        <a href="http://www.kaffe.org">Kaffe</a>.  The same code will
+        work with GCJ, as shown <a href="jni-comp.txt">here</a>.
         </p>
         <p>
-        Note that you must compile the C++ files used for CNI with the
-        -fno-rtti option.
+        Note that for version 2.95, you must compile the C++ files 
+        used for CNI with the -fno-rtti option.
+        This constraint does not apply in version 3.0 and later.
         </p>
         <p>The primary source of documentation for CNI is at <a href="papers/cni/t1.html">http://gcc.gnu.org/java/papers/cni/t1.html</a></p>
       </blockquote>
@@ -733,18 +682,14 @@ $ ../configure [...]
           <h3><a name="6_2">6.2 Is it possible to invoke GCJ compiled Java code from a C++ application?</a></h3>
         </dt>
         <blockquote> 
-          <p>At this time, no.  Parts of the libgcj runtime, particularly the
-	  threads environment, need to be initialized before Java code can
-	  run correctly.  There is currently no way to perform this initialization
-	  apart from having it done automatically when your Java main class is
-	  started.  The work that needs to be done includes defining the API
-	  (invocation interface) through which the Java runtime can be invoked 
-	  via CNI, and implementing the mechanism to allow Java thread objects
-	  to be attached to an existing native thread. </p>
-	  <p>
-	  Of course, it is possible to instantiate Java classes
-	  and call back into them from C++ code: the only requirement is that
-	  your application must have been started from Java "main" method.	  
+          <p>Yes, the current GCJ 3.1 development sources support a CNI-based 
+	  invocation interface as well as the traditional JNI invocation API. </p>
+	  
+	  <p>CNI code just needs to call <code>JvCreateJavaVM()</code> and 
+	  <code>JvAttachCurrentThread()</code> before making any Java calls.
+
+          See <a href="http://gcc.gnu.org/ml/java-patches/2001-q2/msg00224.html">here</a> 
+	  for more details on how to use the CNI interface.
 	  </p>
         </blockquote>
       </dl>
