Add m32r-elf/m32r-sim.  Tweak old comments, update verification dates.

--- a/htdocs/simtest-howto.html
+++ b/htdocs/simtest-howto.html
@@ -71,8 +71,16 @@ make check-gcc RUNTESTFLAGS=--target_board=arm-sim
 <tr valign="top">
  <td>arm-elf</td>
  <td>arm-sim</td>
- <td>2001-07-30</td>
- <td>Many unexpected failures for C++: 420 and Fortran: 400.</td>
+ <td>2001-11-11</td>
+ <td></td>
+</tr>
+
+<tr valign="top">
+ <td>m32r-elf</td>
+ <td>m32r-sim</td>
+ <td>2001-11-11</td>
+ <td>Unexpected failures: C: 100, C++: 39, Fortran: 482, ObjC:
+ 1.</td>
 </tr>
 
 <tr valign="top">
@@ -85,8 +93,8 @@ make check-gcc RUNTESTFLAGS=--target_board=arm-sim
 <tr valign="top">
  <td>mn10300-elf</td>
  <td>mn10300-sim</td>
- <td>2001-07-30</td>
- <td>CC0 target.  Many unexpected failures for Fortran: 40 and ObjC: 72.</td>
+ <td>2001-11-11</td>
+ <td>CC0 target.</td>
 </tr>
 
 <tr valign="top">
