Correct minor formatting bug.

--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -627,11 +627,12 @@ $ ../configure [...]
           <h3><a name="5_6">5.6 How can I profile my application?</a></h3>
         </dt>
         <dd>Currently, only single threaded Java code may be used by the profiler 
-	(gprof). POSIX threads seem to be incompatible with the gmon stuff.</dd>
+	(gprof). POSIX threads seem to be incompatible with the gmon stuff.
 	<p>
 	A couple of other tools that have been mentioned on the GCJ mailing list are 
 	sprof and cprof.  The former is part of GNU libc; the latter can be found
 	<A HREF="http://opensource.corel.com/cprof.html">here</A>.</p>
+	</dd>
       </dl>
       
     <hr>  
