Add policy on commas after "e.g." and "i.e.".

--- a/htdocs/codingconventions.html
+++ b/htdocs/codingconventions.html
@@ -248,6 +248,12 @@ with <code>@command</code> when in Texinfo, for the commands for
 compilation when the emphasis is on those; "GNU C" and "GNU C++" for
 language dialects; and try to avoid the older term "GNU CC".</p>
 
+<p>Use a comma after "e.g." or "i.e." if and only if it is appropriate
+in the context and the slight pause a comma means helps the reader; do
+not add them automatically in all cases just because some style guides
+say so.  (In Texinfo manuals, <code>@:</code> should to be used after
+"e.g." and "i.e." when a comma isn't used.)</p>
+
 <p>In Texinfo manuals, Texinfo 4.0 features may be used, and should be
 used where appropriate.  URLs should be marked up with
 <code>@uref</code>; email addresses with <code>@email</code>;
