--- a/htdocs/java/papers/gcc-java.html
+++ b/htdocs/java/papers/gcc-java.html
@@ -4,8 +4,8 @@
 <body>
 <h1>A Gcc-based Java Implementation</h1>
 <address>
-<a href="http://www.cygnus.com/~bothner">Per Bothner</a>
-<a href="mailto:bothner@cygnus.com"> bothner@cygnus.com</a>
+<a href="http://www.bothner.com/">Per Bothner</a>
+<a href="mailto:bothner@cygnus.com">bothner@cygnus.com</a>
 </address>
 December 1996
 <p>
