Adapt a couple of changed links, replace several (mostly broken) links by plain text.

--- a/htdocs/extensions.html
+++ b/htdocs/extensions.html
@@ -43,7 +43,7 @@ be a good testsuite for the compiler...</p>
 
 <h2>
 Bounds checking patches for
-<A HREF="http://www.inter.NL.net/hcc/Haj.Ten.Brugge">GCC releases</A>
+<A HREF="http://www.inter.NL.net/hcc/Haj.Ten.Brugge/">GCC releases</A>
 and
 <A HREF="ftp://nscs.fast.net/pub/binaries/boundschecking">GCC snapshots</A>
 </h2>
