--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -248,9 +248,7 @@ href="http://www.codesourcery.com/gcc-snapshots.html">snapshots of
 GCC</a>, distributed as RPMs for GNU/Linux on Intel platforms, plus
 build logs and testsuite results.  In order to allow users to more
 easily confirm whether the current snapshot of GCC fixes a particular
-bug, an online compilation <a
-href="http://www.codesourcery.com/gcc-compile.html">web form</a> is
-provided.
+bug, an online compilation web form is provided.
 </dd>
 
 <dt><b>March 13, 2000</b></dt>
@@ -382,9 +380,8 @@ targets as they appear.
 </dd>
 
 <dt><b>August 31, 1999</b></dt>
-<dd>Cygnus Solutions has released
-<a href="ftp://gcc.gnu.org/pub/java/libgcj-2.95.1.tar.gz">libgcj
-version 2.95.1</a> Java runtime libraries for use with GCC 2.95.1.
+<dd>Cygnus Solutions has released libgcj
+version 2.95.1 Java runtime libraries for use with GCC 2.95.1.
 </dd>
 
 <dt><b>August 19, 1999</b></dt>
@@ -394,15 +391,12 @@ version 2.95.1</a> Java runtime libraries for use with GCC 2.95.1.
 
 <dt><b>August 4, 1999</b></dt>
 <dd>
-A new snapshot of the new
-<a href="ftp://gcc.gnu.org/pub/libstdc++/libstdc++-2.90.6.tar.gz">
-Standard C++ Library V3</a> has been released.  You can find more information
-from the
+A new snapshot of the new Standard C++ Library V3 has been released.
+You can find more information from the
 <a href="libstdc++/">libstdc++ project's home page</a>.
 
-<p>Cygnus Solutions has released
-<a href="ftp://gcc.gnu.org/pub/java/libgcj-2.95.tar.gz">libgcj
-version 2.95</a> Java runtime libraries for use with GCC 2.95.
+<p>Cygnus Solutions has released libgcj
+version 2.95 Java runtime libraries for use with GCC 2.95.
 </dd>
 
 <dt><b>August 2, 1999</b></dt>
@@ -505,7 +499,7 @@ that tracks checkins to the egcs webpages CVS repository.
 
 <dt><b>April 7, 1999</b></dt>
 <dd>
-<a href="http://www.cygnus.com/">Cygnus</a> announces the first public
+Cygnus announces the first public
 release of libgcj, the runtime component of the GNU compiler for Java.
 <br><a href="news/javaannounce.html">Read the release announcement</a>.
 <br><a href="java/">Goto the libgcj homepage</a>.
@@ -535,7 +529,7 @@ the stack.
 
 <dt><b>March 10, 1999</b></dt>
 <dd>
-<a href="http://www.cygnus.com/">Cygnus</a> donates
+Cygnus donates
 <a href="news/cprop.html">improved global constant propagation</a> and
 <a href="news/lcm.html">lazy code motion optimizer framework</a>.
 </dd>
@@ -549,7 +543,7 @@ The egcs project now has
 <dt><b>February 26, 1999</b></dt>
 <dd>
 <a href="mailto:rth@cygnus.com">Richard Henderson</a> of
-<a href="http://www.cygnus.com">Cygnus Solutions</a> has donated a major
+Cygnus Solutions has donated a major
 rewrite of the
 <a href="news/cfg.html">control flow analysis pass</a> of the compiler.
 </dd>
@@ -563,7 +557,7 @@ are expected in the future.
 
 <dt><b>January 21, 1999</b></dt>
 <dd>
-<a href="http://www.cygnus.com/">Cygnus</a> donates support for the PowerPC
+Cygnus donates support for the PowerPC
 750 processor.  The PPC750 is a 32bit superscalar implementation of the
 PowerPC family manufactured by both Motorola and IBM.  The PPC750 is targetted
 at high end Macs as well as high end embedded applications.
@@ -577,13 +571,13 @@ Christian Bruel and Jeff Law donate improved
 
 <dt><b>January 14, 1999</b></dt>
 <dd>
-<a href="http://www.cygnus.com/">Cygnus</a> donates support for Hypersparc
+Cygnus donates support for Hypersparc
 (SS20) and Sparclite86x (embedded) processors.
 </dd>
 
 <dt><b>December 7, 1998</b></dt>
 <dd>
-<a href="http://www.cygnus.com/">Cygnus</a> donates support for demangling of
+Cygnus donates support for demangling of
 HP aCC symbols.
 </dd>
 
@@ -608,7 +602,7 @@ Contributed by Ulrich Drepper.
 
 <dt><b>November 21, 1998</b></dt>
 <dd>
-<a href="http://www.cygnus.com/">Cygnus</a> donates support for the SH4
+Cygnus donates support for the SH4
 processor.
 </dd>
 
@@ -653,7 +647,7 @@ Cygnus donates <a href="java/gcj-announce.txt"><b>Java front end</b></a>.
 
 <dt><b>August 29, 1998</b></dt>
 <dd>
-  <a href="http://www.cygnus.com/">Cygnus</a> donates <a href="news/chill.html"><b>Chill front end and runtime</b></a>.
+Cygnus donates <a href="news/chill.html"><b>Chill front end and runtime</b></a>.
 </dd>
 
 <dt><b>August 25, 1998</b></dt>
@@ -694,7 +688,7 @@ framework</b></a>.
 
 <dt><b>May 18, 1998</b></dt>
 <dd>
-  <a href="http://www.cygnus.com/">Cygnus</a> donates <a href="news/gcse.html"><b>gcse optimization pass</b></a>.
+Cygnus donates <a href="news/gcse.html"><b>gcse optimization pass</b></a>.
 </dd>
 
 <dt><b>May 15, 1998</b></dt>
@@ -741,9 +735,7 @@ framework</b></a>.
 <dt><b>August 15, 1997</b></dt>
 <dd>
   The egcs project is <a href="news/announcement.html">announced publicly</a>
-  and the first <a href="ftp://egcs.cygnus.com/pub/egcs/snapshots/index.html">
-  snapshot</a>
-  is put on-line.
+  and the first snapshot is put on-line.
 </dd>
 
 </dl>
