--- a/htdocs/frontends.html
+++ b/htdocs/frontends.html
@@ -31,11 +31,11 @@ are very mature.</p>
 <li><a href="http://agnes.dida.physik.uni-essen.de/~gnu-pascal/">GNU
 Pascal Compiler</a> (GPC).</li>
 
-<li><a href="http://www.cs.mu.oz.au/mercury/download/gcc-backend.html">
-Mercury</a>, a declarative logic/functional language. 
-The University of Melbourne Mercury compiler is written in Mercury;
-originally it compiled via C but now it also has a backend that generates
-assembler directly, using the GNU Compiler Collection backend.</li>
+<li><a
+href="http://www.cs.mu.oz.au/research/mercury/download/gcc-backend.html">Mercury</a>,
+a declarative logic/functional language. The University of Melbourne Mercury
+compiler is written in Mercury; originally it compiled via C but now it also
+has a backend that generates assembler directly, using the GCC backend.</li>
 
 <li><a href="http://CobolForGCC.sourceforge.net/">Cobol For GCC</a>
 (at an early stage of development).</li>
