--- a/htdocs/projects/beginner.html
+++ b/htdocs/projects/beginner.html
@@ -94,7 +94,7 @@ does that check, and run it against the entire test suite.</p>
 <li>Set up more autobuilders.
 
 <p>We already have an autobuilder by Geoff Keating (see <a
-href="http://www.cygnus.com/~geoffk/gcc-regression/">gcc-regression</a>),
+href="http://people.redhat.com/geoffk/gcc-regression/">gcc-regression</a>),
 which nags people in e-mail when they break the tree.</p>
 
 <p>We'd like to have a similar setup for other platforms.  At the
