* done.html: Fix broken links. 	* faq-portugese.html: Likewise. 	* faq.html: Likewise. 	* thanks.html: Likewise.

--- a/htdocs/java/done.html
+++ b/htdocs/java/done.html
@@ -123,7 +123,7 @@
 	    standardly built using gcj.
 	</td>
 	<td>The <A
-	    HREF="http://resam.univ-lyon1.fr/~tamanoir">Tamanoir</A>
+	    HREF="http://www.ens-lyon.fr/~jpgelas/TAMANOIR/">Tamanoir</A>
 	    page. <A HREF="http://gcc.gnu.org/ml/java/2001-01/msg00069.html">
 	    Entry</A> submitted by
             <a href="mailto:jpgelas@lhpcm.univ-lyon1.fr">Jean Patrick
