--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -274,10 +274,10 @@ $ gij HelloWorld
 	<p> As of March 6, 2000, libgcj has been relicenced, and copyright has
 	been assigned to the <A HREF="http://www.gnu.org/">FSF</A>. This allows 
 	us to share and merge much of the libgcj codebase with the 
-	<A HREF="http://www.classpath.org">Classpath</A> project. Our eventual goal 
-	is for Classpath to be an upstream source provider for libgcj, however it 
-	will be some time before this becomes reality: libgcj and Classpath have different 
-	implementations of
+	<A HREF="http://www.gnu.org/software/classpath/">Classpath</A> project. 
+	Our eventual goal is for Classpath to be an upstream source provider for libgcj, 
+	however it will be some time before this becomes reality: libgcj and Classpath 
+	have different implementations of
 	many core java classes. In order to merge them, we need to select the 
 	best (most efficient, cleanest) implementation of each method/class/package,
 	resolve any conflicts created by the merge, and test the final result. 
