--- a/htdocs/java/thanks.html
+++ b/htdocs/java/thanks.html
@@ -31,7 +31,7 @@ Please keep this list in alphabetical order.
 <li>Scott Bambrough for help porting the compiler.
 <li>Jon Beniston for his Win32 port.
 <li>Geoff Berry for his object serialization work and various patches.
-<li>Hans-J. Boehm for his <a href="http://reality.sgi.com/boehm/gc.html">garbage collector</a>,
+<li>Hans-J. Boehm for his <a href="http://www.hpl.hp.com/personal/Hans_Boehm/gc/">garbage collector</a>,
 IA-64 libffi port, and other work.
 <li>Godmar Back for his improvements and encouragement.
 <li>Scott Bambrough for help porting the compiler.
